# info-deck

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: user.py
backend/app/routers/: auth.py  games.py
backend/app/services/: supabase_service.py
backend/app/services/apis/: api_client_factory.py  base_client.py  games_client.py
backend/app/services/external_services/: redis_service.py  supabase_service.py
backend/app/utils/: db.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CardWithGridEllipsis.tsx  Footer.tsx  Header.tsx  LoginForm.tsx  RegisterForm.tsx  TypingEffect.tsx
frontend/src/components/ui/: button.tsx
frontend/src/context/: authStore.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: AuthService.tsx
frontend/src/styles/: index.css
frontend/src/types/: LoginResponse.tsx
frontend/src/utils/: ProtectedRoute.tsx  axiosInstance.tsx  cn.ts
